fix(locationPane): button alignment
refs: #223

--- a/app/veganaut/location/location.less
+++ b/app/veganaut/location/location.less
@@ -78,6 +78,7 @@
     margin-bottom: 15px;
     text-align: center;
     color: @_color-blue;
+    width: 100%;
     svg {
         height: 10px;
         fill: @_color-blue;
